# rga-demo-1

./: .pre-commit-config.yaml  app.py  main.py  md5.txt  pyproject.toml
.cursor/rules/: powershell-python-venv.mdc
.github/workflows/: ci.yml
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py
chroma_db/: chroma.sqlite3
config/: agent.yaml  chroma.yaml  rag.yaml
model/: factory.py
prompts/: report_prompt.txt
rag/: rag_service.py  vector_store.py
tests/: test_main.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
